WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
242901
LocalSampleBufferDisplayLayer::didFail should take into account LocalSampleBufferDisplayLayer::m_didFail
https://bugs.webkit.org/show_bug.cgi?id=242901
Summary
LocalSampleBufferDisplayLayer::didFail should take into account LocalSampleBu...
youenn fablet
Reported
2022-07-19 08:25:02 PDT
LocalSampleBufferDisplayLayer::didFail should take into account LocalSampleBufferDisplayLayer::m_didFail
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2022-07-19 08:26:07 PDT
<
rdar://problem/97261086
>
youenn fablet
Comment 2
2022-07-19 08:30:10 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/2545
EWS
Comment 3
2022-07-20 01:18:51 PDT
Committed
252641@main
(2ba7200fe1f8): <
https://commits.webkit.org/252641@main
> Reviewed commits have been landed. Closing PR #2545 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug