LocalSampleBufferDisplayLayer::didFail should take into account LocalSampleBufferDisplayLayer::m_didFail https://bugs.webkit.org/show_bug.cgi?id=242901 rdar://problem/97261086

Reviewed by Eric Carlson.

* Source/WebCore/platform/graphics/avfoundation/objc/LocalSampleBufferDisplayLayer.mm:
(WebCore::LocalSampleBufferDisplayLayer::didFail const):

After some testing, we can see that LocalSampleBufferDisplayLayer::layerErrorDidChange is sometimes called while status is not AVQueuedSampleBufferRenderingStatusFailed.
This means LocalSampleBufferDisplayLayer::layerErrorDidChange is called but LocalSampleBufferDisplayLayer::didFail returns false.
This might be due to some callOnMainThread that we are doing.
This might prevent recreating the LocalSampleBufferDisplayLayer and break the video rendering, for instance in case of Siri interruptions (this reproes sometimes not always as per testing).
To fix this, LocalSampleBufferDisplayLayer::didFail will always return true if LocalSampleBufferDisplayLayer::m_didFail is set to true as well.

Canonical link: https://commits.webkit.org/252641@main